--- a/src/index.html
+++ b/src/index.html
@@ -572,10 +572,12 @@
             },
             breakpoints: {
                 0: {
+                    spaceBetween:14,
                     slidesPerView: "1.8",
                     slidesOffsetAfter: 100
                 },
                 1200: {
+                    spaceBetween:24,
                     slidesPerView: "7.2",
                     slidesOffsetAfter: 100
                 }
@@ -596,10 +598,12 @@
             },
             breakpoints: {
                 0: {
+                    spaceBetween:14,
                     slidesPerView: "1.8",
                     slidesOffsetAfter: 100
                 },
                 1200: {
+                    spaceBetween:24,
                     slidesPerView: "7.2",
                     slidesOffsetAfter: 100
                 }
