fix: slider loop

--- a/src/index.html
+++ b/src/index.html
@@ -561,7 +561,7 @@
             slidesPerView: "2.8",
             spaceBetween: 24,
             // disableOnInteraction:false,
-            // loop:true,
+            loop:true,
             // autoplay: {
             //   delay: 2500,
             //   disableOnInteraction: false,
@@ -574,7 +574,7 @@
                 0: {
                     spaceBetween:14,
                     slidesPerView: "1.8",
-                    slidesOffsetAfter: 100
+                    slidesOffsetAfter: 0
                 },
                 1200: {
                     spaceBetween:24,
@@ -587,7 +587,7 @@
             slidesPerView: "2.8",
             spaceBetween: 24,
             // disableOnInteraction:false,
-            // loop:true,
+            loop:true,
             // autoplay: {
             //   delay: 2500,
             //   disableOnInteraction: false,
@@ -600,7 +600,7 @@
                 0: {
                     spaceBetween:14,
                     slidesPerView: "1.8",
-                    slidesOffsetAfter: 100
+                    slidesOffsetAfter: 0
                 },
                 1200: {
                     spaceBetween:24,
