fix: slider problem on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -558,7 +558,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
-            slidesPerView: "2.8",
+            slidesPerView: "8",
             spaceBetween: 24,
             // disableOnInteraction:false,
             loop:true,
@@ -573,13 +573,12 @@
             breakpoints: {
                 0: {
                     spaceBetween:14,
-                    slidesPerView: "1.8",
-                    slidesOffsetAfter: 0
+                    slidesPerView: "3.5",
                 },
                 1200: {
                     spaceBetween:24,
                     slidesPerView: "7.2",
-                    slidesOffsetAfter: 100
+                    // slidesOffsetAfter: 100
                 }
             }
         });
