fix: video attributes

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 px-0">
-                    <video autoplay playsinline loop class="video">
+                    <video autoplay playsinline muted defaultMuted loop class="video">
                         <source src="./assets//images/hero_video.mp4" type="video/mp4">
                         
                         <!-- <source src="movie.ogg" type="video/ogg"> -->
