fix: img eager loading

--- a/src/index.html
+++ b/src/index.html
@@ -420,8 +420,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 px-0 certificates_bg">
-                    <img src="./assets/images/footer_img.svg" class="certificates_bg__image" alt="">
-                    <img src="./assets/images/Background.svg" class="certificates_bg__image__mobile" alt="">
+                    <img src="./assets/images/footer_img.svg" loading="eager" class="certificates_bg__image" alt="">
+                    <img src="./assets/images/Background.svg" loading="eager" class="certificates_bg__image__mobile" alt="">
 
                 </div>
             </div>
