fix: homepage responsive

--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-12 px-0">
+                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
                         <div class="business_item__wrapper">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 px-0">
+                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
                         <div class="business_item__wrapper">
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 px-0">
+                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
                         <div class="business_item__wrapper">
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 px-0">
+                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
                         <div class="business_item__wrapper">
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 px-0">
+                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
                         <div class="business_item__wrapper">
@@ -308,7 +308,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -334,7 +334,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -360,7 +360,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4 px-0 px-sm-1">
+                <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
@@ -400,14 +400,14 @@
             <div class="row">
                 <div class="col-12 mySwiper2 swiper">
                     <div class="swiper-wrapper">
-                        <img class="swiper-slide" src="./assets/images/partners_light.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners2.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners3.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners4.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners5.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners6.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners7.svg" alt="">
-                        <img class="swiper-slide" src="./assets/images/partners8.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners_light.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners2.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners3.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners4.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners5.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners6.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners7.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners8.svg" alt="">
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
@@ -598,7 +598,7 @@
             breakpoints: {
                 0: {
                     spaceBetween:14,
-                    slidesPerView: "1.8",
+                    slidesPerView: "7",
                     slidesOffsetAfter: 0
                 },
                 1200: {
