--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,36 @@
 </head>
 
 <body>
+    <section id="mobile_menu">
+        <div class="mobile_menu__close">
+            <img src="./assets/images/x-close.svg" class="menu_close__btn" alt="">
+        </div>
+        <div class="menu_item__wrapper">
+            <a href="#about">
+                <p>About us</p>
+            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            </a>
+            
+        </div>
+        <div class="menu_item__wrapper">
+            <a href="#about">
+                <p>About us</p>
+            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            </a>
+        </div>
+        <div class="menu_item__wrapper">
+            <a href="#about">
+                <p>About us</p>
+            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            </a>
+        </div>
+        <div class="menu_item__wrapper">
+            <a href="#about">
+                <p>About us</p>
+            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            </a>
+        </div>
+    </section>
     <section id="navbar" class="section w-100">
         <div class="container-fluid px-0">
             <div class="row">
@@ -554,7 +584,7 @@
             </div>
         </div>
     </section>
-
+<script src="./assets/js/mobile_menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
