fix: mobile menu links

--- a/src/index.html
+++ b/src/index.html
@@ -39,20 +39,20 @@
             
         </div>
         <div class="menu_item__wrapper">
-            <a href="#about">
-                <p>About us</p>
+            <a href="#services">
+                <p>Services</p>
             <img src="./assets/images/arrow-narrow-right.svg" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
-            <a href="#about">
-                <p>About us</p>
+            <a href="#footer">
+                <p>Contact us</p>
             <img src="./assets/images/arrow-narrow-right.svg" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
-            <a href="#about">
-                <p>About us</p>
+            <a href="#footer">
+                <p>Request a Quote</p>
             <img src="./assets/images/arrow-narrow-right.svg" alt="">
             </a>
         </div>
