fix: page scrolling after svg click

--- a/src/index.html
+++ b/src/index.html
@@ -24,36 +24,37 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/css/index.css">
+    <script src="./assets/js/mobile_menu.js"></script>
 </head>
 
 <body>
-    <section id="mobile_menu">
+    <section id="side_menu">
         <div class="mobile_menu__close">
             <img src="./assets/images/x-close.svg" class="menu_close__btn" alt="">
         </div>
         <div class="menu_item__wrapper">
             <a href="#about">
                 <p>About us</p>
-            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
             
         </div>
         <div class="menu_item__wrapper">
             <a href="#services">
                 <p>Services</p>
-            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
             <a href="#footer">
                 <p>Contact us</p>
-            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
             <a href="#footer">
                 <p>Request a Quote</p>
-            <img src="./assets/images/arrow-narrow-right.svg" alt="">
+            <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
     </section>
@@ -584,7 +585,7 @@
             </div>
         </div>
     </section>
-<script src="./assets/js/mobile_menu.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
