--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
             <div class="row w-100">
                 <div class="col-6 video_box d-flex justify-content-center align-items-center">
                     <div class="about_video__wrapper">
-                        <video autoplay loop class="video_about">
+                        <video autoplay playsinline muted defaultMuted loop class="video_about">
                             <source src="./assets/images/about_video.mp4" type="video/mp4">
     
     
