feat: certificates page

--- a/src/index.html
+++ b/src/index.html
@@ -543,7 +543,9 @@
                         <p>Business Ethics</p>
                         <p>Our Values</p>
                         <p>Partners</p>
-                        <p>Certificates</p>
+                        <a href="./certificates.html">
+                            <p>Certificates</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
