feat: certificates page

--- a/src/contact.html
+++ b/src/contact.html
@@ -38,7 +38,7 @@
             <img src="./assets/images/x-close.svg" class="menu_close__btn" alt="">
         </div>
         <div class="menu_item__wrapper">
-            <a href="#about">
+            <a href="./index.html#aboutUs">
                 <p>About us</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
@@ -83,7 +83,9 @@
                         <div class="navbar d-flex justify-content-between align-items-center gap-60">
                             <div class="menu_item">
                                 <div class="d-flex align-items-center">
-                                    <p class="menu_item__text">About us</p>
+                                    <a href="./index.html#aboutUs">
+                                        <p class="menu_item__text">About us</p>
+                                    </a>
                                     <img src="./assets/images/down_icon.svg" alt="">
                                 </div>
 
@@ -309,7 +311,7 @@
                         Quick links
                     </p>
                     <div class="quick_links">
-                        <p>About us</p>
+                        <a href="./index.html#aboutUs"></a>
                         <p>Business Ethics</p>
                         <p>Our Values</p>
                         <p>Partners</p>
