fix: side menu link

--- a/src/certificates.html
+++ b/src/certificates.html
@@ -33,13 +33,13 @@
             <img src="./assets/images/x-close.svg" class="menu_close__btn" alt="">
         </div>
         <div class="menu_item__wrapper">
-            <a href="#about">
+            <a href="./index.html#aboutUs">
                 <p>About us</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
-            <a href="#services">
+            <a href="./index.html#services">
                 <p>Services</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
@@ -53,7 +53,7 @@
 
         </div>
         <div class="menu_item__wrapper">
-            <a href="#footer">
+            <a href="./contact.html">
                 <p>Request a Quote</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
