--- a/src/index.html
+++ b/src/index.html
@@ -40,20 +40,20 @@
 
         </div>
         <div class="menu_item__wrapper">
-            <a href="#services">
+            <a href="./index.html#services">
                 <p>Services</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
-            <a href="#footer">
+            <a href="./contact.html">
                 <p>Contact us</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
 
         <div class="menu_item__wrapper">
-            <a href="#footer">
+            <a href="./contact.html">
                 <p>Request a Quote</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
