fix: contact page responsive

--- a/src/contact.html
+++ b/src/contact.html
@@ -145,7 +145,7 @@
                     <p class="contactpage_subtitle">Any question or remarks? Just write us a message!</p>
                 </div>
             </div>
-            <div class="row contact_form__wrapper">
+            <div class="row w-100 contact_form__wrapper">
                 <div class="col-6 contact_form__box">
                     <img src="./assets/images/contact.png" class="contact_form__img" alt="">
                 </div>
