--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </section>
-    <section id="partners" class="section w-100">
+    <!-- <section id="partners" class="section w-100">
         <div class="container-fluid">
             <div class="row">
                 <div id="aboutUs"></div>
@@ -184,16 +184,14 @@
                         <img class="partners_img swiper-slide" src="./assets/images/partners6.svg" alt="">
                         <img class="partners_img swiper-slide" src="./assets/images/partners7.svg" alt="">
                         <img class="partners_img swiper-slide" src="./assets/images/partners8.svg" alt="">
-                        <!-- <img class="partners_img swiper-slide" src="./assets/images/partners_light.svg" alt="">
-                        <img class="partners_img swiper-slide" src="./assets/images/partners_light.svg" alt="">
-                        <img class="partners_img swiper-slide" src="./assets/images/partners_light.svg" alt=""> -->
                     </div>
                 </div>
             </div>
         </div>
 
-    </section>
+    </section> -->
     <section id="about" class="section w-100">
+        <div id="aboutUs"></div>
         <div class="container-fuild">
             <div class="row w-100">
                 <div class="col-12 about_title">
@@ -447,7 +445,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="suppliers_section__title">Our reliable suppliers and <br>
+                    <p class="suppliers_section__title">Our reliable suppliers
                         business partners</p>
                 </div>
             </div>
@@ -473,40 +471,37 @@
     <section id="certificates" class="section w-100">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 px-0 certificates_bg">
+                <div class="col-12 px-0 certificates_bg position-relative">
                     <img src="./assets/images/certificate-bg-desktop.jpg" loading="eager" class="certificates_bg__image"
                         alt="">
                     <img src="./assets/images/about-bg-mobile.png" loading="eager"
                         class="certificates_bg__image__mobile" alt="">
 
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12 certificates_header_wrapper">
-                    <div class="certificate_wrapper__mobile">
-                        <p class='certificates_header__title'>One Aircraft at a Time</p>
-                        <p class="certificates_header__subtitle">Join us this exciting journey and experience the
-                            difference of an Horizon Mechanics provider that cares as much about your aircraft as you
-                            do.</p>
-                        <button class="certificate_btn">Our Certificates</button>
-                        <div class="certificate_img__wrapper certificate_mobile">
-                            <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
-                            <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
-                            <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
+                <div class="row position-absolute">
+                    <div class="col-12">
+                        <div class="certificate_section__wrapper">
+                            <p class="certificates_header__title">Revolutionizing Aviation, <br>One Innovation at a Time
+                            </p>
+                            <p class="certificates_header__subtitle">Our experienced team of aviation experts will
+                                collaborate
+                                with you to create custom,
+                                cost-effective solutions that meet
+                                your needs. Get in touch to learn why airlines all over the world rely on us for
+                                aircraft
+                                spare
+                                parts.</p>
+                            <button class="certificate_btn">Get in Touch</button>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row certificate_wrapper w-100">
-                <div class="row" style="background-color: #000; border-radius: 24px; padding: 40px 62px;">
-                    <div class="col-6">
-                        <p class="certificate_wrapper__title">Our Certificates</p>
-                    </div>
-                    <div class="col-6">
-                        <div class="certificate_img__wrapper">
-                            <img src="./assets/images/certificate_img.svg" alt="">
-                            <img src="./assets/images/certificate_img.svg" alt="">
-                            <img src="./assets/images/certificate_img.svg" alt="">
+                    <div class="col-12 mt-3 ps-4 ps-sm-0">
+                        <div class="certificate_item__wrapper">
+                            <p class="certificate_wrapper__title">Our certificates</p>
+                            <div class="certificate_wrapper ps-2 ps-sm-0">
+                                <img src="./assets/images/certificate_img.svg" clas alt="">
+                                <img src="./assets/images/certificate_img.svg" clas alt=""><img
+                                    src="./assets/images/certificate_img.svg" clas alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -515,108 +510,138 @@
     </section>
     <section id="footer" class="section w-100">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item footer_logo__desktop">
-                    <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
-                    <p style="color: #1E1C20;
-                    font-size: 20px;
-                    font-family: Figtree;
-                    font-weight: 500;
-                    line-height: 32px;">We keep you up to date</p>
-                    <div class="email_input__wrapper">
-                        <input type="text" placeholder="Your email address" class="email_input">
-                        <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
-                    </div>
-                    <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
-                    <div class="social_meadia__wrapper">
-                        <p style="color: #262626;
-                        font-size: 16px;
-                        font-family: Roboto;
-                        font-weight: 500;
-                        line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
+            <div class="row justify-content-center">
+                <div class="col-4 col-sm-12 col-md-4 footer_logo__desktop">
+                    <div class="row">
+
+                        <div class="col-12 pe-5 footer_item footer_logo__desktop">
+                            <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            <p style="color: #1E1C20;
+                                                font-size: 20px;
+                                                font-family: Figtree;
+                                                font-weight: 500;
+                                                line-height: 32px;">We keep you up to date</p>
+                            <div class="email_input__wrapper">
+                                <input type="text" placeholder="Your email address" class="email_input">
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
+                            </div>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <div class="social_meadia__wrapper">
+                                <p style="color: #262626;
+                                                    font-size: 16px;
+                                                    font-family: Roboto;
+                                                    font-weight: 500;
+                                                    line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Quick links
-                    </p>
-                    <div class="quick_links">
-                        <a href="./index.html#aboutUs">
-                            <p>About us</p>
-                        </a>
-                        <p>Business Ethics</p>
-                        <p>Our Values</p>
-                        <p>Partners</p>
-                        <a href="./certificates.html">
-                            <p>Certificates</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Services
-                    </p>
-                    <div class="services_links">
-                        <p>Spare parts</p>
-                        <p>Exchange</p>
-                        <p>AOG</p>
-                        <p>Repair Management</p>
 
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Contact us
-                    </p>
-                    <div class="contact_links">
-                        <a href="#footer">
-                            <p>Contact with Us</p>
-                        </a>
-                        <a href="./contact.html">
-                            <p>Request a quote</p>
-                        </a>
+                <div class="col-8 col-sm-12 col-md-8">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Quick links
+                            </p>
+                            <div class="quick_links">
+                                <a href="./index.html#aboutUs">
+                                    <p>About us</p>
+                                </a>
+                                <p>Business Ethics</p>
+                                <p>Our Values</p>
+                                <p>Partners</p>
+                                <a href="./certificates.html">
+                                    <p>Certificates</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Services
+                            </p>
+                            <div class="services_links">
+                                <p>Spare parts</p>
+                                <p>Exchange</p>
+                                <p>AOG</p>
+                                <p>Repair Management</p>
 
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item footer_logo__mobile">
-                    <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
-                    <p style="color: #1E1C20;
-                    font-size: 20px;
-                    font-family: Figtree;
-                    font-weight: 500;
-                    line-height: 32px;">We keep you up to date</p>
-                    <div class="email_input__wrapper___mobile">
-                        <input type="text" placeholder="Your email address" class="email_input">
-                        <img src="./assets//images/email_icon.svg" class="email_icon" alt="">
-                    </div>
-                    <div class="social_meadia__wrapper___mobile">
-                        <p style="color: #262626;
-                        font-size: 16px;
-                        font-family: Roboto;
-                        font-weight: 500;
-                        line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Contact us
+                            </p>
+                            <div class="contact_links">
+                                <a href="#footer">
+                                    <p>Contact with Us</p>
+                                </a>
+                                <a href="./contact.html">
+                                    <p>Request a quote</p>
+                                </a>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item footer_logo__mobile">
+                            <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            <p style="color: #1E1C20;
+                                                                        font-size: 20px;
+                                                                        font-family: Figtree;
+                                                                        font-weight: 500;
+                                                                        line-height: 32px;">We keep you up to date</p>
+                            <div class="email_input__wrapper___mobile">
+                                <input type="text" placeholder="Your email address" class="email_input">
+                                <img src="./assets//images/email_icon.svg" class="email_icon" alt="">
+                            </div>
+                            <div class="social_meadia__wrapper___mobile">
+                                <p style="color: #262626;
+                                                                            font-size: 16px;
+                                                                            font-family: Roboto;
+                                                                            font-weight: 500;
+                                                                            line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <div class="social_meadia__wrapper">
+                                <p style="color: #262626;
+                                                                            font-size: 16px;
+                                                                            font-family: Roboto;
+                                                                            font-weight: 500;
+                                                                            line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-md-5 col-sm-5 mt-4 footer_item">
+                            <p class="footer_header interested">
+                                Interested in trading with us?
+                            </p>
+                            <p class="mailto">sales@horizonmechanics.com</p>
+                            <div class="contact_wrapper">
+                                <div>
+                                    <p class="contact_item__header">Phone numbers</p>
+                                    <p class="phone_number">(+971)45 613 6000</p>
+                                    <p class="phone_number">(+971)51 233 0032</p>
+                                </div>
+                                <div>
+                                    <p class="contact_item__header">Address</p>
+                                    <p class="address">Business Center1. M Floor. MeydanFZ <br>
+                                        NadAl Sheba, P.O. Box 9305, Dubai, UAE</p>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
-                    <div class="social_meadia__wrapper">
-                        <p style="color: #262626;
-                        font-size: 16px;
-                        font-family: Roboto;
-                        font-weight: 500;
-                        line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
-                        </div>
-                    </div>
                 </div>
+
             </div>
         </div>
     </section>
